kubernetes/deployment.yaml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mne-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mne-ui
  template:
    metadata:
      labels:
        app: mne-ui
    spec:
      containers:
        - name: mne-ui
          image: thomasfaria/esa-mne-challenge:v0.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8501
          resources:
            limits:
              cpu: 30000m
              memory: 50Gi
            requests:
              cpu: 100m
              memory: 256Mi
