kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mne-ui-service
spec:
  type: ClusterIP
  ports:
    - port: 8501
      targetPort: 8501
      protocol: TCP
      name: http
  selector:
    app: mne-ui
